<resources>
    <string name="app_name">TokenD Authenticator</string>
    <string name="search">Search</string>
    <string name="tokend_network_hint">Network</string>
    <string name="not_specified">Not specified</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="recover">Recover</string>
    <string name="accounts">Accounts</string>
    <string name="retry">Retry</string>

    <string name="error_try_again">An error occurred. Try again later</string>
    <string name="error_connection_try_again">Connection error. Try again later</string>
    <string name="no_accounts_message">No Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="save_recovery_seed">Save your recovery seed</string>
    <string name="recovery_seed_explanation">Save this seed in a secure place.
        In case you change device or re-install app you will be able to recover access to your account
        by using this seed</string>
    <string name="seed_copied">Seed has been copied to the clipboard</string>
    <string name="error_seed_mismatch">Seed doesn\'t match the confirmation</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="seed_not_copied_confirmation">This seed is the only way to recover your account. You will not be able to get it later</string>
    <string name="i_understand">I understand</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="account_created">Account has been created</string>
    <string name="validate_recovery_seed">Validate recovery seed</string>
    <string name="validate_recovery_seed_explanation">Please validate this seed in the field below to ensure that you copied it properly</string>
    <string name="continue_action">Continue</string>
    <string name="error_email_already_taken">Email is already taken</string>
    <string name="template_auth_confirmation_dialog_title">\"%1$s\" would like to</string>
    <string name="confirm_action">Confirm</string>
    <string name="recovery">Recovery</string>
    <string name="recover_account">Recover Account</string>
    <string name="recovery_seed">Recovery seed</string>
    <string name="error_invalid_seed">Invalid seed</string>
    <string name="error_email_not_verified">Email is not verified</string>
    <string name="template_auth_account_selection_title">Select account for \"%1$s\"</string>
    <string name="manage">Manage</string>
    <string name="processing_auth_request">Processing request…</string>
    <string name="app_authorized">App authorized</string>
    <string name="scan_qr_code_action">Scan QR code</string>
    <string name="error_unknown_qr">Unknown QR code format</string>
    <string name="template_authorized_app_dialog_title">\"%1$s\" is able to</string>
    <string name="revoke_access_action">Revoke access</string>
    <string name="manage_account">Manage Account</string>
    <string name="general">General</string>
    <string name="access">Access</string>
    <string name="expires">Expires:</string>
    <string name="permanent">Permanent</string>
    <string name="no_signers_message">No associated apps</string>
    <string name="pin_code_title">PIN code</string>
    <string name="set_up_pin_code_title">Set up PIN code</string>
    <string name="enter_pin_code">Enter PIN code</string>
    <string name="enter_new_pin_code">Enter new PIN code</string>
    <string name="confirm_pin_code">Confirm PIN code</string>
    <string name="error_pin_confirmation_mismatch">PIN doesn\'t match the confirmation</string>
    <string name="processing_progress">Processing…</string>
    <string name="error_fingerprint_locked">Too many failed attempts. Try again later</string>
    <string name="or_use_fingerprint">Or use your fingerprint</string>
    <string name="error_many_wrong_entry_attempts">Too many wrong entry attempts.</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="error_many_failed_entry_attempts">Too many failed entry attempts</string>
    <string name="error_cipher_failed">Unable to decrypt data</string>
    <string name="access_error_message">It seems you\'ve lost an access to the current account</string>
    <string name="recover_suggestion">Try to recover it</string>
    <string name="delete">Delete</string>
    <string name="delete_account_title">Delete current account?</string>
    <string name="delete_account_message">
        You are about to delete current account from the device.
        However it will remain in the network and
        you will be able to recover it later using the recovery seed
    </string>
    <string name="secret_seed">Secret seed</string>
    <string name="seed_alert_dialog">"You are about to show sensitive data of the selected account.\nAnyone who knows the secret seed can take possession of your account.\nDo you want to continue?"</string>
    <string name="yes">Yes</string>
    <string name="decryption_progress">Decryption…</string>
    <string name="settings">Settings</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="settings_security_group">Security</string>
    <string name="settings_information_group">Information</string>
    <string name="open_source_licenses_title">Open source licenses</string>
    <string name="security_code_changed_message">Security code has been changed</string>
    <string name="change_security_code_title">Change security code</string>
    <string name="change_security_code_progress">Security code change…</string>
    <string name="device_is_not_secure">Device is not secure</string>
    <string name="security_limitations_summary">
        Some features are unavailable, extra security mechanisms are enabled
    </string>
    <string name="security_limitations_explanation">
        This device cannot provide enough security level for normal Authenticator work.
        It\'s probably caused by enabled root access.
        \n\nIn order to keep your accounts secured the following limitations has been applied:\n\n
        \u00A0• You have to use strong password as a security code\n
        \u00A0• Fingerprint is disabled\n
        \u00A0• Security code is being asked on any account-related action\n
    </string>
    <string name="template_timer">Wait for %1$s sec…</string>
    <string name="password_title">Password</string>
    <string name="set_up_password_title">Set up password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_password_confirmation_mismatch">Password doesn\'t match the confirmation</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_weak_password">Weak password</string>
</resources>
