<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="vertical">

        <include layout="@layout/layout_network_field" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email_edit_text"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_floatingLabelText="@string/email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/seed_edit_text"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:hint="@string/recovery_seed"
            android:inputType="textCapCharacters" />

        <include
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:paddingBottom="@dimen/standard_padding">

            <Button
                android:id="@+id/recovery_button"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/recover_account" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>