<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/InfoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/standard_margin"
            android:paddingTop="@dimen/half_standard_margin">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/network_logo_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_network" />

            <LinearLayout
                android:id="@+id/network_info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_margin"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/network_logo_image_view"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/network_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    android:textIsSelectable="true"
                    tools:text="TokenD" />

                <TextView
                    android:id="@+id/network_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/quarter_standard_margin"
                    android:textIsSelectable="true"
                    tools:text="api.demo.tokend.org" />

            </LinearLayout>

            <TextView
                android:id="@+id/network_title"
                style="@style/HintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quarter_standard_margin"
                android:text="@string/tokend_network_hint"
                app:layout_constraintLeft_toLeftOf="@id/network_info_layout"
                app:layout_constraintRight_toRightOf="@id/network_info_layout"
                app:layout_constraintTop_toBottomOf="@id/network_info_layout" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/horizontal_divider" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/standard_margin"
            android:paddingTop="@dimen/standard_margin">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/email_logo_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email" />

            <LinearLayout
                android:id="@+id/email_info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_margin"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/email_logo_image_view"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    tools:text="mail@mail.com" />

            </LinearLayout>

            <TextView
                android:id="@+id/email_title"
                style="@style/HintText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quarter_standard_margin"
                android:text="@string/email"
                app:layout_constraintLeft_toLeftOf="@id/email_info_layout"
                app:layout_constraintRight_toRightOf="@id/email_info_layout"
                app:layout_constraintTop_toBottomOf="@id/email_info_layout" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/horizontal_divider" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/error_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/standard_margin"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/error_logo_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginLeft="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="@+id/suggestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/error_description"
                app:srcCompat="@drawable/ic_alert_circle_outline" />

            <TextView
                android:id="@+id/error_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_padding"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/access_error_message"
                app:layout_constraintStart_toEndOf="@id/error_logo_image_view"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/suggestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quarter_standard_margin"
                style="@style/SecondaryText"
                android:text="@string/recover_suggestion"
                app:layout_constraintTop_toBottomOf="@id/error_description"
                app:layout_constraintStart_toStartOf="@id/error_description"
                app:layout_constraintEnd_toEndOf="@id/error_description"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/horizontal_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suggestion" />

        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/delete_button"
                style="@style/SecondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/half_standard_margin"
                android:text="@string/delete" />

            <Button
                android:id="@+id/recover_button"
                style="@style/DialogButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/half_standard_margin"
                android:tag="primary_action"
                android:text="@string/recover" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>